# david

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: checks.yml
configs/: bootstrap.sh  gunicorn.service  nginx.conf  scheduler.service  worker.service
david/: asgi.py  urls.py  wsgi.py
david/api/: urls.py
david/api/v1/: urls.py
david/api/v1/core/: serializers.py  urls.py  views.py
david/apps/core/: apps.py  celery.py  models.py  tasks.py  views.py
david/apps/core/management/commands/: logger.py  scheduler.py
david/apps/core/migrations/: 0001_initial.py  0002_log_created_at_log_updated_at.py
david/settings/: base.py  prod.py
david/static/: manifest.json
david/static/css/: fonts.css
david/static/css/index/: base.css
david/templates/: base.html  index.html
david/tests/: conftest.py  factories.py
david/tests/api/: test_healthcheck.py  test_logs.py
david/tests/views/: test_admin.py  test_index.py
